# GeminiHydra-v15

./: .env.example  .gitignore  .lighthouserc.json  .vercelignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  RATE_LIMITS.md  __test_ls.test.ts  biome.json  dev.bat  dev.vbs  docker-compose.yml  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  release.bat  stryker.config.mjs  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vercel.json  vite.config.d.ts.map  vite.config.ts  vitest.config.ts
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  Shuttle.toml  docker-compose.yml  fly.staging.toml  fly.toml
backend/adk/: .env.example  Dockerfile  fly.toml  pyproject.toml  requirements.txt
backend/adk/adk/: __init__.py  agent.py  config.py  server.py
backend/adk/adk/agents/: __init__.py  coordinator.py  orchestration.py  review_pipeline.py  witcher_agents.py
backend/adk/adk/tools/: __init__.py  bridge.py
backend/migrations/: 20260214_001_init.sql  20260215_003_ecosystem_info.sql  20260216_002_welcome_message.sql  20260217_004_sessions.sql  20260218_005_session_agent.sql  20260218_006_dynamic_agents.sql  20260218_008_ollama_settings.sql  20260220_007_agent_keywords.sql  20260222_009_rag_and_sandbox.sql  20260224_010_model_pins.sql  20260225_011_oauth_tokens.sql  20260225_013_trigram_index.sql  2026022601_012_lower_agent_index.sql  2026022603_014_agent_system_prompts.sql  2026022604_015_audit_log.sql  2026022605_016_remove_ollama.sql  2026022606_017_improve_agent_quality.sql  2026022608_019_agent_routing_improvements.sql  2026022609_020_settings_improvements.sql  2026022610_021_max_tokens_65536.sql  2026022711_022_dijkstra_decomposition.sql  20260227_018_agent_system_prompts.sql  2026022812_023_thinking_level.sql  2026022813_024_a2a_protocol.sql  2026022815_025_adk_orchestration.sql  2026022816_030_mcp_support.sql  2026022817_031_working_directory.sql  2026022818_032_google_auth.sql  2026022819_033_session_working_directory.sql  2026030101_034_prompt_history.sql  2026030102_035_agent_enhancements.sql  2026030103_036_agent_usage.sql  2026030104_037_ocr_history.sql  2026030201_038_github_oauth.sql  2026030202_039_vercel_oauth.sql  2026030203_040_service_tokens.sql
backend/scripts/: backup.sh
backend/src/: a2a.rs  analysis.rs  audit.rs  auth.rs  browser_proxy.rs  classify.rs  context.rs  error.rs  files.rs  handlers.rs  lib.rs  logs.rs  main.rs  model_registry.rs  models.rs  oauth.rs  oauth_github.rs  oauth_google.rs  oauth_vercel.rs  ocr.rs  ollama.rs  prompt.rs  service_tokens.rs  sessions.rs  state.rs  system_monitor.rs  tool_defs.rs  tools.rs  watchdog.rs
backend/src/api/handlers/: agent.rs  execution.rs  files.rs  gemini.rs  health.rs  mod.rs  system.rs
backend/src/core/: agent.rs  mod.rs
backend/src/core/execution/: mod.rs  sse.rs
backend/src/db/: mod.rs
backend/src/files/: mod.rs  validator.rs
backend/src/handlers/: agents.rs  execute.rs  files_handlers.rs  mod.rs  streaming.rs  system.rs  tests.rs
backend/src/mcp/: client.rs  config.rs  mod.rs  server.rs
backend/src/sessions/: crud.rs  history.rs  memory.rs  messages.rs  mod.rs  settings.rs
backend/src/tools/: fly_tools.rs  git_tools.rs  github_tools.rs  mod.rs  vercel_tools.rs  web_scraping.rs  zip_tools.rs
backend/tests/: api_tests.rs  health_rate_limit_test.rs  health_test.rs  load_test.js  schema_test.rs
docs/: API.md  (+8 more)
(+158 files in other folders)
