[package]
name = "geminihydra-backend"
version = "15.0.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "compression-br", "trace", "limit", "set-header"] }
tower_governor = "0.8"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
regex = "1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0.100"
thiserror = "2.0.18"
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
sysinfo = "0.35"
subtle = "2"
tokio-stream = "0.1"
futures-util = "0.3"
tokio-util = "0.7"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
streaming-iterator = "0.1"
tree-sitter = "0.24"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
pgvector = { version = "0.4", features = ["sqlx"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
url = "2"
aes-gcm = "0.10"
hex = "0.4"
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
shuttle-axum = { version = "0.57.0", optional = true }
shuttle-runtime = { version = "0.57.0", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_System_Console"] }

[features]
default = []
shuttle = ["dep:shuttle-axum", "dep:shuttle-runtime"]
test-helpers = []

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http = "1"
http-body-util = "0.1"

[profile.release]
lto = "thin"
strip = true
opt-level = 3
